# tauri-controls

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  TODOs.md  bun.lockb  index.html  package.json  pnpm-lock.yaml  prettier.config.cjs  tailwind.config.js  tsconfig.json  tsconfig.node.json  turbo.json  vite.config.ts
.changeset/: config.json  core-adapters-architecture.md  hot-bats-explain.md
.github/: README.md
.github/workflows/: action.yml  publish.yml
apps/playground/: astro.config.mjs  package.json
apps/playground/src-tauri/: Cargo.toml  tauri.conf.json
apps/playground/src-tauri/capabilities/: main.json
apps/playground/src-tauri/src/: main.rs
apps/tauri-controls/: .eslintrc.cjs  .gitignore  .prettierignore  CHANGELOG.md  README.md  bun.lockb  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1697827010716-d1e68b4134e12.mjs
apps/tauri-controls-solid/: .gitignore  CHANGELOG.md  README.md  bun.lockb  index.html  package.json  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1697827010759-b3d8ab652696d.mjs
apps/tauri-controls-solid/src/: App.tsx  index.tsx  style.css
apps/tauri-controls-solid/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-controls-svelte/: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  CHANGELOG.md  README.md  bun.lockb  package.json  playwright.config.ts  pnpm-lock.yaml  prettier.config.cjs  svelte.config.js  tailwind-build.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
apps/tauri-controls-svelte/src/: app.html  index.test.ts
apps/tauri-controls-svelte/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-controls-svelte/src-tauri/capabilities/: main.json
apps/tauri-controls-svelte/tests/: test.ts
apps/tauri-controls-vue/: CHANGELOG.md  README.md  bun.lockb  index.html  package.json  prettier.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
apps/tauri-controls-vue/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-controls-vue/src-tauri/capabilities/: main.json
apps/tauri-controls-vue/src-tauri/src/: main.rs
src/: App.tsx  index.d.ts  main.tsx
src-tauri/: tauri.conf.json
src/component/: controls.tsx  icons.tsx  index.d.ts  index.ts  window-controls.tsx
src/component/ui/: Button.tsx
src/tauri-controls/: index.ts  types.ts  window-controls.tsx  window-titlebar.tsx
(+70 files in other folders)
